--- a/src/styles/LoyaltyRewards.css
+++ b/src/styles/LoyaltyRewards.css
@@ -12,58 +12,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
-  padding: 0;
+  min-height: calc(100vh - 76px);
+  padding: 20px 0 30px;
   background: #24252c url('../images/BG.png') no-repeat center center;
   background-size: cover;
 }
 
-/* Header */
-.header {
-  background: #fff;
-    width: 100%;
-    padding: 30px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    flex-direction: row;
-}
-
-/* Menu Button */
-.menu-button {
-  background: transparent;
-  border: none;
-  color: #000;
-  font-size: 28px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  padding: 5px;
-}
-
-/* Profile Section */
-.profile-info {
-  display: flex;
-  align-items: center;
-}
-
-.profile-pic {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-left: 10px;
-  border: 2px solid #000;
-  object-fit: cover;
-}
-
-.default-profile-icon {
-  font-size: 50px;
-  color: #000;
-  margin-left: 10px;
-}
 
 /* Points Section */
 .points-section {
